@@ -1,11 +1,0 @@
-engines:
-  eslint:
-    enabled: true
-  csslint:
-    enabled: true
-  phpcodesniffer:
-    enabled: true
-  phpmd:
-    enabled: true
-  scss-lint:
-    enabled: true
