@@ -2,7 +2,7 @@ name = DS Bean Fields
 description = Provides better integration between BEANs and Display Suite.
 core = 7.x
 package = Stanford
-version = 7.x-1.0-dev
+version = 7.x-2.7
 project = ds_bean_fields
 dependencies[] = bean
 dependencies[] = ds
