@@ -2,7 +2,7 @@ name = Stanford Bean Types Permissions
 description = A permissions module for stanford_bean_types so that it may be used in a clean installation profile.
 core = 7.x
 package = Stanford
-version = 7.x-2.5-alpha1
+version = 7.x-2.7
 dependencies[] = bean
 dependencies[] = bean_admin_ui
 dependencies[] = ctools
