@@ -2,7 +2,7 @@ name = Stanford Bean Types
 description = BEAN types to integrate with the Stanford Image Feature
 core = 7.x
 package = Stanford
-version = 7.x-2.x
+version = 7.x-2.7
 project = stanford_bean_types
 dependencies[] = bean_admin_ui
 dependencies[] = ctools
